2006-11-08  Paul Eggert  <eggert@cs.ucla.edu>

	* lib/autoconf/types.m4 (AC_TYPE_LONG_LONG_INT): Set
	ac_cv_type_long_long_int to 'yes' instead of 'cross-compiling'.
	Imported from a similar patch to gnulib by Bruno Haible.

2006-11-08  Paul Eggert  <eggert@cs.ucla.edu>

	* NEWS: New macros AC_C_FLEXIBLE_ARRAY_MEMBER, AC_C_VARARRAYS.
	* doc/autoconf.texi (C Compiler): Document them.
	* lib/autoconf/c.m4 (AC_C_FLEXIBLE_ARRAY_MEMBER, AC_C_VARARRAYS):
	New macros, taken from gnulib.

2006-11-07  Paul Eggert  <eggert@cs.ucla.edu>

	* lib/autoconf/types.m4 (AC_TYPE_LONG_LONG_INT): Detect bug in
	Tandem NonStop Kernel (OSS) cc -O circa 2004, reported by
	Matthew Woehlke.

2006-10-28  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* tests/torture.at (Configuring subdirectories): Do not skip
	Automake 1.10 nor future Automake 11.1 (sic).

2006-10-26  Joel E. Denny  <jdenny@ces.clemson.edu>
	and Stepan Kasal  <kasal@ucw.cz>

	Handle special characters in test case titles correctly.
	* lib/autotest/general.m4 (AT_INIT): M4-quote and AS_ESCAPE AT_help_all
	properly.
	(AT_SETUP): M4-quote and AS_ESCAPE the title properly everywhere.
	* tests/autotest.at (AT_CHECK_AT_TITLE): Add EXPANDED-TITLE-TO-TEST
	argument.  Extend to check titles printed by ./micro-suite and
	./micro-suite -l and the title in micro-suite.log.
	(Backquote in a test title,
	Single-quote in a test title,
	Double-quote in a test title): Don't expect failure anymore.
	(Backslash in a test title): Put a non-whitespace character after the
	backslash so that Bourne shells might actually see it as an escape
	sequence.
	(Brackets in a test title,
	Pound in a test title,
	Comma in a test title,
	Quoted Macro in a test title,
	Macro in a test title,
	Macro with single-quote in a test title): New tests.
	(Macro with backquote in a test title,
	Macro with double-quote in a test title,
	Macro with backslash in a test title): New tests expected to fail.
	* tests/torture.at (#define header templates): M4-quote this title in